--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div id="info">
         <h1>Hello there,</h1>
         <h1>I am Amir.</h1>
-        <h1 id="txt-gradient">Ui Developer</h1>
+        <h1 id="txt-gradient">UI Developer</h1>
       </div>
     </div>
     <div id="contact">
