--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="main-container">
       <a id="instagram" href="https://instagram.com/amirhbeigi" target="blank">
-        <span>AmirhBiegi</span>
+        <span>AmirhBeigi</span>
         <div id="avatar"></div>
       </a>
       <div id="info">
