--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="main-container">
-      <a id="instagram" href="https://instagram.com/amirhbeigi" target="blank">
+      <a id="twitter" href="https://twitter.com/amirhbeigi" target="blank">
         <span>AmirhBeigi</span>
         <div id="avatar"></div>
       </a>
