formated index.html

--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="dist/styles/styles.css" />
-    <meta name="theme-color" content="#000000" />
-    <title>AmirhBiegi</title>
-  </head>
-  <body>
-    <div id="main-container">
-      <a id="twitter" href="https://twitter.com/amirhbeigi" target="blank">
-        <span>AmirhBeigi</span>
-        <div id="avatar"></div>
-      </a>
-      <div id="info">
-        <h1>Hello there,</h1>
-        <h1>I am Amir.</h1>
-        <h1 id="txt-gradient">UI Developer</h1>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="dist/styles/styles.css" />
+  <meta name="theme-color" content="#000000" />
+  <title>AmirhBiegi</title>
+</head>
+
+<body>
+  <div id="main-container">
+    <a id="twitter" href="https://twitter.com/amirhbeigi" target="blank">
+      <span>AmirhBeigi</span>
+      <div id="avatar"></div>
+    </a>
+    <div id="info">
+      <h1>Hello there,</h1>
+      <h1>I am Amir.</h1>
+      <h1 id="txt-gradient">UI Developer</h1>
     </div>
-    <div id="contact">
-      <span>
-        👋 Just say Hello. I am looking forward to hearing from you!
-      </span>
-      <a href="mailto:ir.beigi@gmail.com"
-        ><button id="btn-contact">GET IN TOUCH</button></a
-      >
-    </div>
-  </body>
+  </div>
+  <div id="contact">
+    <span>
+      👋 Just say Hello. I am looking forward to hearing from you!
+    </span>
+    <a href="mailto:ir.beigi@gmail.com"><button id="btn-contact">GET IN TOUCH</button></a>
+  </div>
+</body>
+
 </html>
