change email address

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <span>
       👋 Just say Hello. I am looking forward to hearing from you!
     </span>
-    <a href="mailto:ir.beigi@gmail.com"><button id="btn-contact">GET IN TOUCH</button></a>
+    <a href="mailto:dev.amirhbeigi@gmail.com"><button id="btn-contact">GET IN TOUCH</button></a>
   </div>
 </body>
 
