--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
   </div>
   <div id="contact">
     <span>
-      👋 Just say Hello. I am looking forward to hearing from you!
+      👋 Just say Hello. I am looking forward to
+      hearing from you!
     </span>
-    <a href="mailto:dev.amirhbeigi@gmail.com"><button id="btn-contact">GET IN TOUCH</button></a>
+    <a href="mailto:dev.amirhbeigi@gmail.com"><button id="btn-contact">
+        GET IN TOUCH
+      </button></a>
   </div>
 </body>
 
