update path css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,s initial-scale=1.0" />
-  <link rel="stylesheet" href="dist/styles/CSS/styles.css" />
+  <link rel="stylesheet" href="./dist/styles/CSS/styles.css" />
   <meta name="theme-color" content="#000000" />
   <title>AmirhBiegi</title>
 </head>
