change h1 to span tag

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <div id="avatar"></div>
     </a>
     <div id="info">
-      <h1>Hello there,</h1>
-      <h1>I am Amir.</h1>
-      <h1 id="txt-gradient">UI Developer</h1>
+      <span>Hello there,</span>
+      <span>I am Amir.</span>
+      <span id="txt-gradient">UI Developer</span>
     </div>
   </div>
   <div id="contact">
