--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,s initial-scale=1.0" />
+  <link rel="shortcut icon" href="dist/images/avatar.jpg" type="image/x-icon">
   <link rel="stylesheet" href="./dist/styles/CSS/styles.css" />
   <meta name="theme-color" content="#000000" />
   <title>AmirhBiegi</title>
@@ -11,10 +12,12 @@
 
 <body>
   <div id="main-container">
-    <a id="twitter" href="https://twitter.com/amirhbeigi" target="blank">
-      <span>AmirhBeigi</span>
-      <div id="avatar"></div>
-    </a>
+    <div>
+      <a id="twitter" href="https://twitter.com/amirhbeigi" target="blank">
+        <span>AmirhBeigi</span>
+        <div id="avatar"></div>
+      </a>
+    </div>
     <div id="info">
       <span>Hello there,</span>
       <span>I am Amir.</span>
@@ -26,9 +29,9 @@
       👋 Just say Hello. I am looking forward to
       hearing from you!
     </span>
-    <a href="mailto:dev.amirhbeigi@gmail.com"><button id="btn-contact">
-        GET IN TOUCH
-      </button></a>
+    <a href="mailto:dev.amirhbeigi@gmail.com">
+      <button id="btn-contact">GET IN TOUCH</button>
+    </a>
   </div>
 </body>
 
