link font icon css file

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,s initial-scale=1.0" />
-  <link rel="shortcut icon" href="dist/images/avatar.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="dist/images/avatar.jpg" type="image/x-icon" />
   <link rel="stylesheet" href="./dist/styles/CSS/styles.css" />
+  <link rel="stylesheet" href="./dist/fonts/style.css">
   <meta name="theme-color" content="#000000" />
   <title>AmirhBiegi</title>
 </head>
@@ -26,8 +27,7 @@
   </div>
   <div id="contact">
     <span>
-      👋 Just say Hello. I am looking forward to
-      hearing from you!
+      👋 Just say Hello. I am looking forward to hearing from you!
     </span>
     <a href="mailto:dev.amirhbeigi@gmail.com">
       <button id="btn-contact">GET IN TOUCH</button>
