--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
       <button id="btn-contact">GET IN TOUCH</button>
     </a>
   </div>
+  <footer>
+    <span>I🖤YOU</span>
+    <div>
+      <a href="https://github.com/amirhbeigi" class="icon-github"></a>
+      <a href="https://discord.com/users/amirhbeigi" class="icon-discord"></a>
+      <a href="https://twitter.con/amirhbeigi" class="icon-twitter"></a>
+    </div>
+  </footer>
 </body>
 
 </html>
